--- a/FractalImage/FractalImage/FractalImage.vcxproj
+++ b/FractalImage/FractalImage/FractalImage.vcxproj
@@ -146,14 +146,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
     <ClInclude Include="BitmapFileHeader.h" />
+    <ClInclude Include="BitmapInfoHeader.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FractalImage.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Fractal.cpp" />
+    <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
