--- a/FractalImage/FractalImage/FractalImage.vcxproj.filters
+++ b/FractalImage/FractalImage/FractalImage.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClInclude Include="BitmapFileHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BitmapInfoHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bitmap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="FractalImage.rc">
@@ -28,7 +34,10 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Fractal.cpp">
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bitmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
